# snake-game

./: README.md  README.txt  index.html  main.py  pyproject.toml  requirements.txt
server/: server.py  start.py  state.py
static/: board.js  fruit.js  input.js  main.js  network.js  networking.js  snake.js  style.css
static/snake/: snake.js  snakeDirectionStrategy.js  snakeNotification.js
